# ros_motion_controller

./: Dockerfile  README.md
src/clock_pose_issuer/: CMakeLists.txt  package.xml
src/clock_pose_issuer/include/clock_pose_issuer/: clock_node.h
src/clock_pose_issuer/src/: clock_node.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/cpp_srvcli/src/: add_two_ints_server.cpp
src/gui_pose_issuer/: CMakeLists.txt  package.xml
src/gui_pose_issuer/include/gui_pose_issuer/: clock_gui.h  gui_node.h
src/gui_pose_issuer/src/: clock_gui.cpp  gui_node.cpp
src/launch_manager/: CMakeLists.txt  package.xml
src/launch_manager/launch/: launch_headless.xml  launch_simulated.xml  launch_simulated_teleport.xml
src/motion_controller/: CMakeLists.txt  package.xml
src/motion_controller/include/motion_controller/: motion_ctl_node.h
src/motion_controller/src/: motion_ctl_node.cpp
src/pose_manager/: CMakeLists.txt  package.xml
src/pose_manager/include/pose_manager/: pose_manager_node.h
src/pose_manager/src/: pose_manager_node.cpp
src/tutorial_interfaces/: package.xml
